--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+**/__MACOSX/**
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -127,3 +129,9 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# JetBrains
+**/.idea
+
+# DS_STORE
+.DS_Store
