--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ numpy
 opencv-python
 optax
 orbax-checkpoint
+pytest
 tensorboard
 tensorflow  # required for tensorflow-datasets
 tensorflow-datasets
