--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ optuna
 optuna-dashboard
 orbax-checkpoint>=0.3.5
 pytest
+seaborn
 tensorboard
 tensorflow  # required for tensorflow-datasets
 tensorflow-datasets
