Squashed commit of the following:
commit 38a18f3c1d5bfa39b963190c791ffa4885d2811a
Author: Maximilian Stölzle <maximilian@stoelzle.ch>
Date:   Mon Aug 5 00:46:35 2024 +0200

    Update experiment id in eval script

commit d5529d3289627d97fa3769686fb0f9b063a55703
Author: Maximilian Stölzle <maximilian@stoelzle.ch>
Date:   Mon Aug 5 00:45:25 2024 +0200

    Further adapt tuning script to toy physics datasets

commit a588e6cb8488c5087656f60a800f531d894c4819
Author: Maximilian Stölzle <maximilian@stoelzle.ch>
Date:   Mon Aug 5 00:37:00 2024 +0200

    Minor tuning of some values

commit dcbc7533b120300ed2db88712a47445bcc5b647c
Author: Maximilian Stölzle <maximilian@stoelzle.ch>
Date:   Mon Aug 5 00:28:41 2024 +0200

    Fix normalization for `dm_hamiltonian_dynamics_suite`

commit 54bfd9069c1c5a7e5cd1dbb9bd3c660a1182f853
Author: Maximilian Stölzle <maximilian@stoelzle.ch>
Date:   Sun Aug 4 23:19:00 2024 +0200

    Fix normalization of image for `dm_hamiltonian_dynamics_suite`

commit ec1051d9ca906b13d685d741cba93e122aab15c9
Author: Maximilian Stölzle <maximilian@stoelzle.ch>
Date:   Sun Aug 4 22:46:32 2024 +0200

    Fix bug where plotting loop is not stopped

commit b2dc4ba47e0b8d35159f6122cb38d2491a87ff3a
Author: Maximilian Stölzle <maximilian@stoelzle.ch>
Date:   Sun Aug 4 22:39:29 2024 +0200

    Remove some printing

commit 0e32faa00b282f4dc08f5a14e908ee15c59779e5
Author: Maximilian Stölzle <maximilian@stoelzle.ch>
Date:   Sun Aug 4 22:26:31 2024 +0200

    Add script to evaluate toy physics dynamics

commit cbda4b290b1fcedb3024b314ca990d30f38a483d
Author: Maximilian Stölzle <maximilian@stoelzle.ch>
Date:   Sun Aug 4 22:22:25 2024 +0200

    Fix wrong scaling of cardinality with batch size

commit faa56847cd33eead1ca46367e182c5bd7efdf124
Author: Maximilian Stölzle <maximilian@stoelzle.ch>
Date:   Sun Aug 4 22:14:31 2024 +0200

    Reduce batch size and number of epochs for toy physics dataset

commit 4ca6ddf82a63a2405498eb904744dc23d00a0deb
Author: Maximilian Stolzl

--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,4 @@ tensorflow-datasets
 tqdm
 
 git+https://github.com/mstoelzle/ciclo
+git+https://github.com/mstoelzle/dm_hamiltonian_dynamics_suite
