Fix the `jsrm` version at v0.0.11 as future jsrm version will contain a bug fix which leads to smaller stiffness

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ dill
 dm-pix  # PIX is an image processing library in JAX, for JAX.
 hippox
 jax-models
-jsrm>=0.0.9
+jsrm==0.0.11
 matplotlib
 natsort
 nbodyx
